--- a/package.json
+++ b/package.json
@@ -5,12 +5,20 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "dev": "env-cmd nodemon server/index.js"
   },
   "author": "azurekingstudios",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.11"
+  },
+  "devDependencies": {
+    "env-cmd": "^9.0.1",
+    "nodemon": "^1.19.1"
   }
 }
